[gd_scene load_steps=2 format=3 uid="uid://xxxxxxxxxxxx"]

[ext_resource type="Script" path="res://scenes/game_scene.gd" id="1_xxxxx"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_xxxxx")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.937255, 0.937255, 0.937255, 1)

[node name="WordLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 426.0
offset_top = 50.0
offset_right = 726.0
offset_bottom = 126.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 48
text = "Word"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionContainer" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 276.0
offset_top = 150.0
offset_right = 876.0
offset_bottom = 550.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="Option1" type="TextureButton" parent="OptionContainer"]
custom_minimum_size = Vector2(290, 190)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="Option2" type="TextureButton" parent="OptionContainer"]
custom_minimum_size = Vector2(290, 190)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="Option3" type="TextureButton" parent="OptionContainer"]
custom_minimum_size = Vector2(290, 190)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="Option4" type="TextureButton" parent="OptionContainer"]
custom_minimum_size = Vector2(290, 190)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 50.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "Score: 0"
vertical_alignment = 1

[node name="RoundLabel" type="Label" parent="."]
offset_left = 952.0
offset_top = 50.0
offset_right = 1102.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "Round: 1/10"
vertical_alignment = 1

[node name="FeedbackLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 426.0
offset_top = 560.0
offset_right = 726.0
offset_bottom = 610.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Correct!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FeedbackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="OptionContainer/Option1" to="." method="_on_option_pressed" binds= [0]]
[connection signal="pressed" from="OptionContainer/Option2" to="." method="_on_option_pressed" binds= [1]]
[connection signal="pressed" from="OptionContainer/Option3" to="." method="_on_option_pressed" binds= [2]]
[connection signal="pressed" from="OptionContainer/Option4" to="." method="_on_option_pressed" binds= [3]]
[connection signal="timeout" from="FeedbackTimer" to="." method="_on_feedback_timer_timeout"]
